--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "markdown-note-supports",
   "description": "",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HxxWorkAccount/markdown-note-supports.git"
+  },
   "engines": {
     "vscode": "^1.99.0"
   },
