--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "markdown-note-supports",
   "displayName": "markdown-note-supports",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/HxxWorkAccount/markdown-note-supports.git"
@@ -20,8 +20,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "markdown-note-supports.SelectByLabels",
-        "title": "Markdown Note Supports: Select By Labels"
+        "command": "markdown-note-supports.SelectByLabelsUnion",
+        "title": "Markdown Note Supports: Select By Labels (Union)"
+      },
+      {
+        "command": "markdown-note-supports.SelectByLabelsIntersection",
+        "title": "Markdown Note Supports: Select By Labels (Intersection)"
       }
     ],
     "configuration": {
